--- a/styles/globals.css
+++ b/styles/globals.css
@@ -86,6 +86,8 @@ a {
 }
 
 .container {
+  position: relative;
+  z-index: 2;
   max-width: 760px;
   min-width: 760px;
   margin-left: auto;
